--- a/dataclearning.ipynb
+++ b/dataclearning.ipynb
@@ -1041,11 +1041,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"OLX_cars_dataset00.csv\",index = False)"
+    "df.to_csv(\"olxcleaned.csv\",index = False)"
    ]
   },
   {
